# base

./: ._CCPP  ._Java  ._JavaScript  ._Python  ._Vue  .gitignore  .project  AGENTS.md  CMakeLists.txt  README.md  pom.xml
AI/ClaudeCode/: claudecode.json
AI/opencode/: .gitignore
Android/TestAndroid/: settings.gradle.kts
Android/TestApplication/: settings.gradle
Android/TestIdea2023/: build.gradle  settings.gradle
CCPP/: .__check_prime
CCPP/_array_001/: CMakeLists.txt  main.cpp
CCPP/_check_prime/: CMakeLists.txt  CMakeSettings.json  _check_prime.cpp  _check_prime.h
CCPP/_class_001/: CMakeLists.txt  main.cpp
CCPP/_closure/: CMakeLists.txt  main.cpp
CCPP/_cmake_sample/: CMakeLists.txt
CCPP/_data_type/: CMakeLists.txt  main.cpp
CCPP/_enum_sample/: CMakeLists.txt  main.cpp
CCPP/_enum_strong/: CMakeLists.txt  main.cpp
CCPP/_extern_demo/: CMakeLists.txt  helper.cpp  helper.h  main.cpp
CCPP/_func_ptr/: CMakeLists.txt  main.cpp
CCPP/_hello_c/: CMakeLists.txt
CCPP/_hello_clion/: CMakeLists.txt  main.cpp
CCPP/_hello_cpp/: CMakeLists.txt
CCPP/_hello_cuda/: CMakeLists.txt
CCPP/_hello_qt/: CMakeLists.txt
CCPP/_hello_qt/_hello_qt/: _hello_qt.pro  _hello_qt_zh_CN.ts  main.cpp  mainwindow.ui
CCPP/_hello_qt_001/: CMakeLists.txt
CCPP/_hello_vsstudio/: CMakeLists.txt  CMakeSettings.json  _hello_vsstudio.cpp  _hello_vsstudio.h
CCPP/_hello_vsstudio_001/: CMakeLists.txt  _hello_vsstudio_001.cpp  _hello_vsstudio_001.h
CCPP/_hello_world/: CMakeLists.txt
CCPP/_kruskal/: CMakeLists.txt  main.cpp
CCPP/_maximum_circular_subarray/: CMakeLists.txt  main.cpp
CCPP/_move_constructor/: CMakeLists.txt  main.cpp  my_string.cpp  my_string.h
CCPP/_my_stack/: CMakeLists.txt  my_stack.cpp  my_stack.h
CCPP/_null/: CMakeLists.txt  main.cpp
CCPP/_opencv_sample/: CMakeLists.txt  main.cpp
CCPP/_opration_001/: main.cpp
CCPP/_ptr_array/: CMakeLists.txt  main.cpp
CCPP/_ptr_operation/: CMakeLists.txt  main.cpp
CCPP/_qt_demo_001/_qt_demo_001/: CMakeLists.txt  main.cpp
CCPP/_scheduler/: CMakeLists.txt  main.cpp
CCPP/_single_static/: CMakeLists.txt  main.cpp
CCPP/_string_002/: CMakeLists.txt  main.cpp
CCPP/_test_001/: CMakeLists.txt
CCPP/_test_002/: CMakeLists.txt
CCPP/_test_c/: CMakeLists.txt
CCPP/_test_cpp14/: CMakeLists.txt
CCPP/_test_hdaju/: CMakeLists.txt
CCPP/_test_ide/: CMakeLists.txt
CCPP/_test_sort/: CMakeLists.txt
CCPP/_typedef/: CMakeLists.txt  main.cpp
CCPP/_uniakodaw/: CMakeLists.txt
CCPP/_wchar_t/: CMakeLists.txt  main.cpp
CCPP/cmake_sample/: main.cpp
CCPP/killProcess9736/: CMakeLists.txt  main.cpp
CCPP/net_tools/: CMakeLists.txt  main.cpp
CCPP/net_tools/src/: scanner.cpp
CCPP/net_tools/src/scanner/: scanner.h
CCPP/net_tools/src/traceroute/: traceroute.cpp  traceroute.h
CCPP/sec_test/: CMakeLists.txt  main.cpp
CCPP/test_001/: CMakeLists.txt
CCPP/test_002/: CMakeLists.txt
CCPP/test_006/: CMakeLists.txt
CCPP/test_014/: CMakeLists.txt
CCPP/test_ide_001/: CMakeLists.txt
CCPP/test_ide_003/: CMakeLists.txt
CCPP/testjaind/: CMakeLists.txt  main  main.cpp
CCPP/thread_001/: CMakeLists.txt  main.cpp
CCPP/thread_002/: CMakeLists.txt  main.cpp
CCPP/vector_001/: CMakeLists.txt  main.cpp
Cangjie/_hello_world/: hello.cj
DesignPattern/single/: CMakeLists.txt  main.cpp  singleton.cpp  singleton.h
Doc/GitHub-English-Top-Charts-main/: LICENSE.md  README.md
Go/_a_star/: go.mod  main.go
Go/_arg_handle/: main.go
Go/_array_001/: main.go
Go/_base_001/: go.mod  main.go
Go/_base_grammer/: closures_test.go  go.mod  main.go  slices_test.go
Go/_channel_002/: main.go
Go/_delete_001/: main.go
Go/_excel/: 1.xlsx  go.mod  main.go
Go/_fetch_urls/: main.go
Go/_for_range/: main.go
Go/_for_range_map/: main.go
Go/_go116/: main.go
Go/_go_1_18/: go.mod  main.go
Go/_go_1_19/: go.mod
Go/_go_1_20/: go.mod
Go/_go_1_21/: go.mod
Go/_go_c/: go.mod  main.go
Go/_goroutine_max_002/: main.go
Go/_gpm_001/: main.go  trace.out
Go/_hello_examples/: go.mod
Go/_hello_world/: go.mod
Go/_hook_demo/: main.go
Go/_interface_001/: shape.go
Go/_interface_002/: go.mod
Go/_interface_003/: go.mod  main.go
Go/_interface_sample/: main.go
Go/_ioc_mini/: go.mod  go.sum
Go/_leetcode_001/: main.go
Go/_leetcode_002/: go.mod
Go/_leetcode_005/: go.mod
Go/_leetcode_006/: go.mod
Go/_leetcode_009/: go.mod  main.go
Go/_leetcode_010/: go.mod
Go/_leetcode_011/: go.mod
Go/_leetcode_012/: go.mod
Go/_leetcode_034/: go.mod
Go/_map/: go.mod  main.go
Go/_map_001/: mian.go
Go/_mod_001/: go.mod
Go/_nil_001/: main.go
Harmony/: ._ArkTSPreferences
Java/: .__sse  .__test_quarkus  ._java9-module-examples  ._spring-boot-admin-demo
JavaFX/: ._javafx-dataviewer-wrapper
Python/: .__datasturct  .__grammar  .__minimum  .__test_3810  .__tkinter
Shell/: ._useful-scripts-dev-3.x
Spring/: ._IoC  ._spring-session
Tools/: select_gradle.sh  select_java.ps1  select_java.sh  select_jdk.sh  vscode_osx_settings.json  vscode_win_d_settings.json  vscode_win_settings.json
TypeScript/: package-lock.json  package.json  tsconfig.json
Vue/: .__hello  readme.md
agent/: pom.xml
base/: .project  pom.xml
boot/: pom.xml
ccpp/: CMakeLists.txt  main.c  testStaticStructDef.c  testStaticStructDef.h
ccpp/GTK_demo/: CMakeLists.txt  main.cpp  sample.cpp  sample.hpp
ccpp/_huffman_tree/: CMakeLists.txt  main.cpp
ccpp/cinatra/: CMakeLists.txt  main.cpp
ccpp/qt_demo/: CMakeLists.txt  README.md  application.qrc  conanfile.txt  main.cc
ccpp/qt_demo/src/view/: arrow.cc  arrow.h  diagram_item.cc  diagram_item.h  diagram_scene.cc  diagram_scene.h  diagram_text_item.cc  diagram_text_item.h  main_window.cc  main_window.h
ccpp/qt_test/: CMakeLists.txt  main_windows.cpp  main_windows.hpp  main_windows.ui
ccpp/untitled/: CMakeLists.txt
ccpp/untitled1/: CMakeLists.txt
docker/: Dockerfile
dubbo/: .project  pom.xml
javasistant/: pom.xml
json/: sample.json
logs/: localhost_access_log.2021-07-29.txt
markdown/: LinearLayout布局绘制相关源码解析.md
mybatis/: pom.xml
tomcat/: README.md  pom.xml
zookeeper/: pom.xml
(+12217 files in other folders)
